# seie2011fall

bismark/: modified_openni.launch  new.xml  new_urdf.xml
bismark/behind_the_scene_exploration/: CMakeLists.txt  mainpage.dox  manifest.xml
bismark/gen_icp/: CMakeLists.txt
bismark/gen_icp/src/: generalized_icp.cpp
bismark/my_control/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  frames.gv  mainpage.dox  manifest.xml
bismark/next_best_pose/: CMakeLists.txt
bismark/next_best_pose/src/: information_gain.cpp
hausman/: README  dependencies.txt  release_steps.txt  road_map.txt  segmentation_pipeline.odg  test_app.cpp  textureless_objects_tracking.patch  todo.txt  track_features_lk_class.py
hausman/3d-tracking-lines/: 3d_tracking_lines.cpp  CMakeLists.txt  PrimitivesExtract.cpp  PrimitivesExtract.h  main_testing.cpp
hausman/hausman_pkg/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
hausman/hypotheses_merger/: manifest.xml
hausman/textureless_objects_tracking/: CMakeLists.txt  manifest.xml
hausman/textureless_objects_tracking/include/textureless_objects_tracking/: DenseReconstruction.h  PrimitivesExtract.h  PushPointEstimation.h  TrajectoryClustering.h  point_type.h
hausman/textureless_objects_tracking/launch/: multiple_script.sh  multiple_tracking.launch
hausman/textureless_objects_tracking/python_script/: dist0_1.txt  generate_variables.m  plot_dists.m  plots.m  poses_final.txt  textureless_tracking.py  trajectories.m
hausman/textureless_objects_tracking/results/scene1/: circular.pcd  features.pcd  poses_final.txt  rectangular.pcd  result.pcd  screenshot-1341476618.cam
hausman/textureless_objects_tracking/results/scene2/: circular.pcd  features.pcd  poses_final.txt  rectangular.pcd  result.pcd
hausman/textureless_objects_tracking/results/scene3/: circular.pcd  features.pcd  poses_final.txt  rectangular.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene1.1.1/: RESULT.pcd  result.pcd  screenshot-1347208536.cam
hausman/textureless_objects_tracking/results_ICRA/scene1.1.2/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene1.1.3/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene1.1.4/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene1.2.1/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene1.2.2/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene1.2.3/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene1.2.4/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene2.1.1/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene2.1.2/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene2.1.3/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene2.2.1/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene2.2.2/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene3.1.1/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene3.1.2/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene3.1.3/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/results_ICRA/scene3.1.4/: RESULT.pcd  result.pcd
hausman/textureless_objects_tracking/src/: 3d_tracking_lines.cpp  DenseReconstruction.cpp  PrimitivesExtract.cpp  PushPointEstimation.cpp  TrajectoryClustering.cpp  find_corners.py  main_multiple_tracking.cpp  main_testing.cpp
hausman/todo/: release_steps.txt  road_map.txt
khalil/: LAB - TODO.txt  interesting_questions.txt  location_inference.txt
khalil/barcode_detection/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
khalil/tree_visualizer/: Main.java  MainFrame.java  MainPanel.java  Makefile  Parser.java  README.txt  Tree.java
khalil/uvc_camera/: autofocus.patch
khalil/zbar_qt_ros/: .cproject  .project  manifest.xml
khalil/zbar_tester/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
kidson/: MakefileforPCL  fuerte_mirgration.txt  parameters.txt  pcl_script.sh  ransac_inliers.ods  review2.txt  rgbd_icp_results.txt  rgbdicp_tests.ods  rgbdslam_landmarks_merged.tgz  rgbdslam_notes.txt  rosdep_keys.txt  semantic_links.txt  semantic_mapping_todo.txt  semantic_pipeline.txt  slamTodo.txt
kidson/RGBD_registration/: CMakeLists.txt
kidson/dataCapturer/: CMakeLists.txt  manifest.xml
kidson/frame_alignment/: CMakeLists.txt  manifest.xml
kidson/global_tracker/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml  places.db
kidson/global_tracker/include/: FrameGenerator.h  cluster_manager.h  global_tracker.h  ground_truth.h  node_definitions.h  optimizer.h  visualization.h
kidson/global_tracker/launch/: slam.launch
kidson/global_tracker/src/: FrameGenerator.cpp  cluster_manager.cpp  global_tracker.cpp  ground_truth.cpp  main.cpp  optimizer.cpp  visualization.cpp
kidson/pcl_tutorial/: CMakeLists.txt  mainpage.dox  manifest.xml  todo.txt
kidson/pcl_tutorial/src/: apply_transformation.cpp  cloudTransformer.cpp  correspond_test.cpp  cylinder_segmentation.cpp  euclidean_cluster_test.cpp  example.cpp  extractPCDFromBag.cpp  handleExtraction.cpp  icp_handleExtraction.cpp  icp_pcl.cpp  icp_test.cpp  icp_testbed.cpp  import_mesh.cpp  kdtree_search.cpp  normal_distributions_transform.cpp  normal_estimation.cpp  outliers_PCD.cpp  passthrough_RGBD.cpp  pcd_read.cpp  point_to_plane_test.cpp  project_inliers_rand.cpp  siim-cm-init-lm.cpp  voxFilt_PCD.cpp
kidson/pclforSVN/: icp.h  icp_features.h  icp_features.hpp  transformation_estimation_feature_matches.h  (+1 more)
raoulhoffmann/: CMakeLists.txt  mainpage.dox  manifest.xml
usenko/: Furniture classification.odg  TODO.txt
zahir/: .project  CMakeLists.txt
(+381 files in other folders)
