cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(generalized_icp_test)
set(PCL_DIR "usr/local/share/pcl-1.5/PCLConfig.cmake")
find_package(PCL 1.3 REQUIRED COMPONENTS common io filters registration)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(generalized_icp_test src/generalized_icp.cpp)
target_link_libraries(generalized_icp_test ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_FILTERS_LIBRARIES} ${PCL_REGISTRATION_LIBRARIES})
