cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(3D_TRACKING_LINES)
#find_package(PCL 1.3 REQUIRED COMPONENTS common io)
find_package(PCL 1.3 REQUIRED COMPONENTS)
include_directories(${PCL_INCLUDE_DIRS})
#include_directories (${CMAKE_CURRENT_BINARY_DIR})
#include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include)
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(3d_tracking_lines 3d_tracking_lines.cpp)
target_link_libraries(3d_tracking_lines pcl_common pcl_io pcl_surface pcl_visualization pcl_filters pcl_features pcl_segmentation pcl_tracking pcl_search)
#target_link_libraries(3d_tracking_lines ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
