cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(3D_TRACKING_LINES)
find_package(PCL 1.5.1 REQUIRED COMPONENTS common io surface visualization filters features segmentation tracking search kdtree pcl_sample_consensus)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(3d_tracking_lines 3d_tracking_lines.cpp)
add_executable(main_testing main_testing.cpp PrimitivesExtract.cpp)
target_link_libraries(3d_tracking_lines ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} pcl_common pcl_io pcl_surface pcl_visualization pcl_filters pcl_features pcl_segmentation pcl_tracking pcl_search pcl_kdtree pcl_sample_consensus)
target_link_libraries(main_testing ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} pcl_common pcl_io pcl_surface pcl_visualization pcl_filters pcl_features pcl_segmentation pcl_tracking pcl_search pcl_kdtree pcl_sample_consensus)

